# internal/docs/swagger.yaml
@@ -369,6 +369,42 @@ paths:
       summary: 获取归档列表
       tags:
       - article
+  /articles/random:
+    get:
+      parameters:
+      - default: 5
+        description: 数量
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Response'
+      summary: 获取随机文章
+      tags:
+      - article
+  /articles/recent:
+    get:
+      parameters:
+      - default: 5
+        description: 数量
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Response'
+      summary: 获取最近文章
+      tags:
+      - article
   /articles/search:
     get:
       parameters:
